--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Today" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Plan" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Summary" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Today" tabIcon="create"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Plan" tabIcon="list"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Summary" tabIcon="paper"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
 </ion-tabs>
