--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,18 +1,24 @@
-<!--
-  Generated template for the WelcomePage page.
+<ion-content padding class="welcome">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <h1 class="welcome" > Welcome to Time Planning App </h1>
 
-  <ion-navbar>
-    <ion-title>Welcome</ion-title>
-  </ion-navbar>
-
-</ion-header>
+  <p class="welcome" > This application will help you to manage your time. </p>
 
 
-<ion-content padding>
+
+
+  <ion-buttons class="arrow">
+    <button ion-button (click)="loginPage()">Login </button> <br>
+    <button ion-button (click)="resisterPage()"> Resister</button>
+  </ion-buttons>
+
+
+
+
+
+
 
 </ion-content>
+
+
+
